# ai-setup

./: .fallowrc.json  .gitignore  .release-plan.json  AGENTS.md  CONTEXT-MAP.md  README.md  biome.json  install.ps1  install.sh  package-lock.json  package.json  setup-catalog.json  skills.sh.json  tsconfig.json
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pi-package.yml  release-pr.yml
cli/ai-setup/: CHANGELOG.md  Cargo.toml
cli/ai-setup/src/: app.rs  catalog.rs  doctor.rs  install.rs  jsonc.rs  lib.rs  main.rs  settings.rs  skills.rs  system.rs  ui.rs  update.rs
cli/ai-setup/src/wizard/: mod.rs  render.rs  state.rs  tests.rs
cli/ai-setup/tests/: execute_plan.rs  install_plan.rs
plugins/ask-user/: CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  index.ts  npm-shrinkwrap.json  package.json
plugins/claude-bridge/: CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  index.ts  npm-shrinkwrap.json  package.json
plugins/herdr-jumplist/: CHANGELOG.md  Cargo.toml  README.md  herdr-plugin.toml
plugins/herdr-jumplist/herdr/: build.ps1  build.sh
plugins/herdr-jumplist/src/: herdr.rs  history.rs  main.rs  store.rs
plugins/herdr-project-switcher/: CHANGELOG.md  Cargo.toml  README.md  herdr-plugin.toml
plugins/herdr-project-switcher/herdr/: install.ps1  install.sh
plugins/herdr-project-switcher/src/: config.rs  git_status.rs  herdr.rs  main.rs  projects.rs  reviewr.rs  shell.rs  ui.rs
plugins/herdr-reviewr/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  herdr-plugin.toml
plugins/herdr-reviewr/docs/: RELEASING.md
plugins/herdr-reviewr/herdr/: install.ps1  install.sh
plugins/herdr-reviewr/src/: app.rs  browser.rs  config.rs  diff.rs  export.rs  git.rs  lib.rs  main.rs  proc.rs  sidebar.rs  switcher.rs  ui.rs
plugins/herdr-reviewr/src/collab/: context.rs  materialize.rs  mod.rs  protocol.rs  session.rs  store.rs  topology.rs  transport.rs
plugins/herdr-reviewr/src/forge/: detect.rs  github.rs  gitlab.rs  mod.rs
plugins/herdr-reviewr/tests/: app_flow.rs  pr_candidates.rs  render.rs  sidebar.rs
plugins/herdr-worktree/: CHANGELOG.md  README.md  package.json
plugins/mindwalk/: CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  package.json
plugins/openai-fast/: CHANGELOG.md  README.md  package.json
plugins/pi-reviewr-collab/: CHANGELOG.md  README.md  package.json
plugins/pi-subagents/: CHANGELOG.md  CONTEXT.md  README.md  install.mjs  package.json
plugins/rewind/: CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  index.ts  npm-shrinkwrap.json  package.json
plugins/web-access/: README.md  THIRD_PARTY_NOTICES.md  index.ts  npm-shrinkwrap.json  package.json
scripts/: catalog-lib.mjs  ci-plan.mjs  ensure-github-release.sh  generate-setup-catalog.mjs  plan-releases.mjs  release-lib.mjs  resolve-release.mjs  sync-pi-extensions.sh  sync-skills.sh
skills/ai-setup/: SKILL.md
skills/backlog/: SKILL.md  deps.yml
skills/commit/: SKILL.md  (+1 more)
test/: catalog.test.mjs  claude-bridge-package.test.mjs  herdr-worktree.test.ts  mindwalk-extension.test.ts  mindwalk-package.test.mjs  openai-fast-config.test.mjs  openai-fast-extension.test.mjs  openai-fast-footer.test.mjs  openai-fast-package.test.mjs  pi-package-extension-labels.test.mjs  powershell-ascii.test.mjs  release-automation.test.mjs  rewind-package.test.mjs  sync-pi-extensions.test.mjs  web-access-package.test.mjs
(+213 files in other folders)
