[package]
name = "herdr-project-switcher"
version = "0.3.0"
edition = "2021"
description = "Portable fuzzy project switcher plugin for herdr"
license = "MIT"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1"
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
strip = true
